Add 7 lab and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,23 @@ LB-5-2/.vs
 LB-5-2/packages
 LB-5-2/LB-5-2/bin
 LB-5-2/LB-5-2/obj
+LB-6/packages
+LB-6/.vs
+LB-6/JSON.DAL/bin
+LB-6/JSON.DAL/obj
+LB-6/LB-6/bin
+LB-6/LB-6/obj
+LB-6/SQL.DAL/bin
+LB-6/SQL.DAL/obj
+LB-7A/.vs
+LB-7A/packages
+LB-7A/LB-7A/bin
+LB-7A/LB-7A/obj
+LB-7B/.vs
+LB-7B/packages
+LB-7B/LB-7B/bin
+LB-7B/LB-7B/obj
+LB-7C/packages
+LB-7C/.vs
+LB-7C/LB-7C/bin
+LB-7C/LB-7C/obj
